# Fibonacci_Spiral_Detection

./: .gitignore  DEPLOY.md  Dockerfile  README.md  cloudbuild.yaml  clustering.py  composition_flow.py  deployment-commands.sh  interactive_contour.py  main.py  multiple_contour.py  package-lock.json  package.json  preprocessing.py  response.json  spiral_fit.py  visualization.py
.github/workflows/: firebase-hosting-pull-request.yml
backend/python_server/: clustering.py  main.py  preprocessing.py  spiral_fit.py  visualization.py
backend/rust_axum_server/: .env  Cargo.toml  Dockerfile
backend/rust_axum_server/src/: clustering.rs  handlers.rs  main.rs  preprocessing.rs  spiral_fit.rs  visualization.rs
frontend/: .firebaserc  index.html  script.js  styles.css
local_run/: spiral_fit.py
python_server/: Dockerfile  main.py  requirements.txt  spiral_fit.py  visualization.py
rust_axum_server/: Cargo.toml  Dockerfile
rust_axum_server/src/: main.rs
