[package]
name = "rust_axum_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7.5", features = ["multipart"] }
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

reqwest = { version = "0.12.4", features = ["multipart"] }